@@ -1,3 +1,6 @@
+2013-04-29
+ * user variable permissions
+
 2013-04-24
  * user permissions
 
